--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>z_pages</title>
-    <link rel="stylesheet" type="text/css" href="base.css"/>
-    <link rel="stylesheet" type="text/css" href="z_pages.css"/>
+    <meta charset="UTF-8">
+    <!--<meta name="viewport"-->
+          <!--content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>-->
+    <link rel="stylesheet" type="text/css" href="css/base.css"/>
+    <link rel="stylesheet" type="text/css" href="css/z_pages.css"/>
 </head>
 <body>
-<div class="z_page">
-    <div id="zlpage"><img src="zlpage.png"> 上一页</div>
+<div id="z_pmdwrap">
+    <div id="z_mpdfirst">
+        曾经有一份真诚的爱情放在我面前，我没有珍惜，等我失去的时候我才后悔莫及，人世间最痛苦的事莫过于此。
+        如果上天能够给我一个再来一次的机会，我会对那个女孩子说三个字：我爱你。
+        如果非要在这份爱上加上一个期限，我希望是……
+        一万年
+    </div>
+    <div>
+        曾经有一份真诚的爱情放在我面前，我没有珍惜，等我失去的时候我才后悔莫及，人世间最痛苦的事莫过于此。
+        如果上天能够给我一个再来一次的机会，我会对那个女孩子说三个字：我爱你。
+        如果非要在这份爱上加上一个期限，我希望是……
+        一万年
+    </div>
+</div>
+
+<div id="z_page" class="z_page">
+    <div id="zlpage"><img src="images/zlpage.png"> 上一页</div>
     <ul class="z_num">
         <li class="z_page_active">
             1
@@ -26,13 +43,10 @@
             5
         </li>
     </ul>
-    <div id="zrpage"> 下一页 <img src="zrpage.png"></div>
+    <div id="zrpage"> 下一页 <img src="images/zrpage.png"></div>
 </div>
 
-<script src="jquery-3.1.1.min.js"></script>
-<script src="z_pages.js"></script>
-<script>
-
-</script>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/z_pages.js"></script>
 </body>
 </html>
