--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!--//上传图片并预览-->
     <div>
-        <img class="z_imgshow" src="">
+        <img id="z_imgshow" src="">
         <input type="file" class="z_upfile">
         <span class="z_upimgbtn">上传图片</span>
     </div>
