--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <!--<meta name="viewport"-->
     <!--content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>-->
     <link rel="stylesheet" type="text/css" href="css/base.css"/>
+    <link rel="stylesheet" type="text/css" href="css/swiper.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/z_pages.css"/>
+    <style>
+        .swiper-container {
+            width: 560px;
+            height: 300px;
+            border: 1px solid #999999;
+        }
+    </style>
 </head>
 <body>
 <div class="z_container">
@@ -24,6 +32,22 @@
             如果非要在这份爱上加上一个期限，我希望是……
             一万年
         </div>
+    </div>
+
+    <!--轮播图-->
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+        </div>
+        <!-- 如果需要分页器 -->
+        <div class="swiper-pagination"></div>
+        <!-- 如果需要导航按钮 -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        <!-- 如果需要滚动条 -->
+        <!--<div class="swiper-scrollbar"></div>-->
     </div>
 
     <!--//选择框-->
@@ -92,6 +116,7 @@
 
 </div>
 <script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/swiper.min.js"></script>
 <script src="js/z_pages.js"></script>
 
 </body>
