--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
             <li>
                 3
             </li>
-            <li>
-                4
-            </li>
-            <li>
-                5
-            </li>
-            <li>
+            <li class="z_page_more">
                 ...
             </li>
             <li>
-                10
+                6
+            </li>
+            <li>
+                19
+            </li>
+            <li>
+                20
             </li>
         </ul>
         <div class="z_next"> 下一页 <img src="images/zrpage.png"></div>
