--- a/test.html
+++ b/test.html
@@ -119,52 +119,74 @@
 <script src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript">
     $(".z_page .z_prev").click(function () {
-        $(this).siblings('.z_num').children('li:first-child').next().next()[0].innerText = 3
+        console.log($(this).siblings('.z_num').children(".z_page_active")[0].innerText)
         if ($(this).siblings('.z_num').children(".z_page_active").prev()[0].innerText == '...') {
-            // console.log($(this).siblings('.z_num').children('li:nth-child(1)')[0].innerText)
+            $(this).siblings('.z_num').children('li:first-child').next().next()[0].innerText = 3
             if ($(this).siblings('.z_num').children(".z_page_active")[0].innerText == '4') {
                 $(this).siblings('.z_num').children(".z_page_active").prev().prev().addClass('z_page_active').siblings().removeClass('z_page_active')
             } else {
                 $(this).siblings('.z_num').children(".z_page_active")[0].innerText = --$(this).siblings('.z_num').children(".z_page_active")[0].innerText
             }
         } else {
-            $(this).siblings('.z_num').children(".z_page_active").prev().addClass('z_page_active').siblings().removeClass('z_page_active')
+            if ($(this).siblings('.z_num').children(".z_page_active")[0].innerText > 3 &&
+                $(this).siblings('.z_num').children(".z_page_active")[0].innerText < $(this).siblings('.z_num').children('li:last-child')[0].innerText - 2) {
+                $(this).siblings('.z_num').children(".z_page_active")[0].innerText = --$(this).siblings('.z_num').children(".z_page_active")[0].innerText
+            } else {
+                if ($(this).siblings('.z_num').children(".z_page_active")[0].innerText > $(this).siblings('.z_num').children('li:last-child')[0].innerText - 2) {
+                    $(this).siblings('.z_num').children(".z_page_active").prev().addClass('z_page_active').siblings().removeClass('z_page_active')
+                    $(this).siblings('.z_num').children('li:last-child').prev().prev()[0].innerText = $(this).siblings('.z_num').children('li:last-child')[0].innerText - 2
+                } else {
+                    $(this).siblings('.z_num').children(".z_page_active").prev().addClass('z_page_active').siblings().removeClass('z_page_active')
+                }
+            }
         }
     })
 
     $(".z_page .z_next").click(function () {
-        $(this).siblings('.z_num').children('li:last-child').prev().prev()[0].innerText = $(this).siblings('.z_num').children('li:last-child')[0].innerText - 2
+        console.log($(this).siblings('.z_num').children(".z_page_active")[0].innerText)
         if ($(this).siblings('.z_num').children(".z_page_active").next()[0].innerText == '...') {
+            $(this).siblings('.z_num').children('li:last-child').prev().prev()[0].innerText = $(this).siblings('.z_num').children('li:last-child')[0].innerText - 2
             if ($(this).siblings('.z_num').children(".z_page_active")[0].innerText == $(this).siblings('.z_num').children('li:last-child')[0].innerText - 3) {
                 $(this).siblings('.z_num').children(".z_page_active").next().next().addClass('z_page_active').siblings().removeClass('z_page_active')
             } else {
                 $(this).siblings('.z_num').children(".z_page_active")[0].innerText = ++$(this).siblings('.z_num').children(".z_page_active")[0].innerText
             }
         } else {
-            $(this).siblings('.z_num').children(".z_page_active").next().addClass('z_page_active').siblings().removeClass('z_page_active')
+            if ($(this).siblings('.z_num').children(".z_page_active")[0].innerText > 2 &&
+                $(this).siblings('.z_num').children(".z_page_active")[0].innerText < $(this).siblings('.z_num').children('li:last-child')[0].innerText - 2) {
+                $(this).siblings('.z_num').children(".z_page_active")[0].innerText = ++$(this).siblings('.z_num').children(".z_page_active")[0].innerText
+            } else {
+                if ($(this).siblings('.z_num').children(".z_page_active")[0].innerText < 3) {
+                    $(this).siblings('.z_num').children('li:first-child').next().next()[0].innerText = 3
+                    $(this).siblings('.z_num').children(".z_page_active").next().addClass('z_page_active').siblings().removeClass('z_page_active')
+                } else {
+                    $(this).siblings('.z_num').children(".z_page_active").next().addClass('z_page_active').siblings().removeClass('z_page_active')
+                }
+            }
         }
     })
 
     $(".z_gonum button").click(function () {
         console.log($(this).siblings('input')[0].value)
-        if (
-            $(this).siblings('input')[0].value < $(this).parent().siblings('.z_num').children('li:last-child')[0].innerText - 2 && $(this).siblings('input')[0].value > $(this).parent().siblings('.z_num').children('li:first-child')[0].innerText + 1
-        ) {
-            $(this).parent().siblings('.z_num').children('li:first-child').next().next()[0].innerText = $(this).siblings('input')[0].value
-            $(this).parent().siblings('.z_num').children('li:first-child').next().next().addClass('z_page_active').siblings().removeClass('z_page_active')
-        } else if (
-            $(this).siblings('input')[0].value < $(this).parent().siblings('.z_num').children('li:last-child')[0].innerText - 1 && $(this).siblings('input')[0].value > $(this).parent().siblings('.z_num').children('li:first-child')[0].innerText + 2
-        ) {
-            $(this).parent().siblings('.z_num').children('li:last-child').prev().prev()[0].innerText = $(this).siblings('input')[0].value
-            $(this).parent().siblings('.z_num').children('li:last-child').prev().prev().addClass('z_page_active').siblings().removeClass('z_page_active')
+        if ($(this).siblings('input')[0].value < $(this).parent().siblings('.z_num').children('li:last-child')[0].innerText - 2) {
+            if ($(this).siblings('input')[0].value > 2) {
+                $(this).parent().siblings('.z_num').children('li:first-child').next().next()[0].innerText = $(this).siblings('input')[0].value
+                $(this).parent().siblings('.z_num').children('li:first-child').next().next().addClass('z_page_active').siblings().removeClass('z_page_active')
+            } else {
+                if ($(this).siblings('input')[0].value == 1) {
+                    $(this).parent().siblings('.z_num').children('li:first-child').addClass('z_page_active').siblings().removeClass('z_page_active')
+                } else {
+                    $(this).parent().siblings('.z_num').children('li:first-child').next().addClass('z_page_active').siblings().removeClass('z_page_active')
+                }
+            }
         } else {
-            console.log('0000')
-            // for () {
-            //     if () {
-            //
-            //     }
-            // }
-
+            if ($(this).siblings('input')[0].value == $(this).parent().siblings('.z_num').children('li:last-child').prev().prev()[0].innerText) {
+                $(this).parent().siblings('.z_num').children('li:last-child').prev().prev().addClass('z_page_active').siblings().removeClass('z_page_active')
+            } else if ($(this).siblings('input')[0].value == $(this).parent().siblings('.z_num').children('li:last-child').prev()[0].innerText) {
+                $(this).parent().siblings('.z_num').children('li:last-child').prev().addClass('z_page_active').siblings().removeClass('z_page_active')
+            } else {
+                $(this).parent().siblings('.z_num').children('li:last-child').addClass('z_page_active').siblings().removeClass('z_page_active')
+            }
         }
     })
 
