--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/z_pages.css"/>
     <style>
         .swiper-container {
-            width: 560px;
+            width: 100%;
             height: 300px;
             border: 1px solid #999999;
         }
@@ -80,7 +80,7 @@
     <!--//到顶部-->
     <div class="z_gotop">到顶部</div>
 
-    <!--// 分页-->
+    <!--// 分页 页数大于6页使用如下，小于6页全部列出-->
     <div class="z_page">
         <div class="z_prev"><img src="images/zlpage.png"> 上一页</div>
         <ul class="z_num">
@@ -97,7 +97,7 @@
                 ...
             </li>
             <li>
-                6
+                18
             </li>
             <li>
                 19
