--- a/index.html
+++ b/index.html
@@ -34,6 +34,36 @@
         </div>
     </div>
 
+    <!--导航菜单-->
+    <div class="z_menu">
+        <span class="">
+            <a>1</a>
+            <ul>
+                <li>
+                    <a>2</a>
+                </li>
+                <li>
+                    <a>2</a>
+                </li>
+                <li>
+                    <a>2</a>
+                </li>
+            </ul>
+        </span>
+        <span>
+        <a>1</a>
+        <ul>
+            <li><a>2</a></li>
+            <li><a>2</a></li>
+            <li><a>2</a></li>
+        </ul>
+    </span>
+        <span>
+        <a>1</a>
+
+    </span>
+    </div>
+
     <!--轮播图-->
     <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -48,6 +78,13 @@
         <div class="swiper-button-next"></div>
         <!-- 如果需要滚动条 -->
         <!--<div class="swiper-scrollbar"></div>-->
+    </div>
+
+    <!--tab按钮组-->
+    <div class="z_button_group">
+        <span class="z_button_group_active">按钮1</span>
+        <span>按钮2</span>
+        <span>按钮3</span>
     </div>
 
     <!--//选择框-->
@@ -108,10 +145,10 @@
         </ul>
         <div class="z_next"> 下一页 <img src="images/zrpage.png"></div>
         <div class="z_gonum">
-            跳<input type="number" min="1" value="1">页<button>确定</button>
+            跳<input type="number" min="1" value="1">页
+            <button>确定</button>
         </div>
     </div>
-
 
 
 </div>
