--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <!--// 分页 页数大于6页使用如下，小于6页全部列出-->
     <div class="z_page">
-        <div class="z_prev"><img src="images/zlpage.png"> 上一页</div>
+        <div class="z_prev">上一页</div>
         <ul class="z_num">
             <li class="z_page_active">
                 1
@@ -130,6 +130,17 @@
             <li>
                 3
             </li>
+
+            <!--<li>-->
+                <!--4-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--5-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--6-->
+            <!--</li>-->
+
             <li class="z_page_more">
                 ...
             </li>
@@ -143,7 +154,7 @@
                 20
             </li>
         </ul>
-        <div class="z_next"> 下一页 <img src="images/zrpage.png"></div>
+        <div class="z_next">下一页</div>
         <div class="z_gonum">
             跳<input type="number" min="1" value="1">页
             <button>确定</button>
