--- a/test.html
+++ b/test.html
@@ -25,12 +25,16 @@
         width: 800%;
     }
 
+    /*#demo1 > a,#demo1 > a {*/
+        /*display: block;*/
+    /*}*/
+
     #demo1 {
-        float: left;
+    float: left;
     }
 
     #demo2 {
-        float: left;
+    float: left;
     }
 </style>
 <div id="demo">
