--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
     <div class="z_pmdwrap">
         <div class="z_mpdfirst">
             曾经有一份真诚的爱情放在我面前，我没有珍惜，等我失去的时候我才后悔莫及，人世间最痛苦的事莫过于此。
-            如果上天能够给我一个再来一次的机会，我会对那个女孩子说三个字：我爱你。
-            如果非要在这份爱上加上一个期限，我希望是……
-            一万年
+
         </div>
         <div>
             曾经有一份真诚的爱情放在我面前，我没有珍惜，等我失去的时候我才后悔莫及，人世间最痛苦的事莫过于此。
-            如果上天能够给我一个再来一次的机会，我会对那个女孩子说三个字：我爱你。
-            如果非要在这份爱上加上一个期限，我希望是……
-            一万年
+
         </div>
     </div>
 
@@ -60,7 +56,6 @@
     </span>
         <span>
         <a>1</a>
-
     </span>
     </div>
 
@@ -133,13 +128,13 @@
             </li>
 
             <!--<li>-->
-                <!--4-->
+            <!--4-->
             <!--</li>-->
             <!--<li>-->
-                <!--5-->
+            <!--5-->
             <!--</li>-->
             <!--<li>-->
-                <!--6-->
+            <!--6-->
             <!--</li>-->
 
             <li class="z_page_more">
@@ -162,60 +157,32 @@
         </div>
     </div>
 
-    <!--合作单位滚动-->
-    <div id="scrollLocalP" style="height: 75px; overflow: hidden; position: relative;">
-        <div id="scrollLocalSub" style="">
-            <div id="localDiv" style="color:#666;background: yellow">
-                <table>
-                    <tr>
-                        <td>
-                            <div style="height: 26px; width: 180px; text-align: center; line-height: 26px;">
-                                <div>
-                                    <span id="rptLocal_lblName_0" class="bigtxt">安徽省</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div style="height: 26px; width: 180px; text-align: center; line-height: 26px;">
-                                <div>
-                                    <span id="rptLocal_lblName_2" class="bigtxt">北京市</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div style="height: 26px; width: 180px; text-align: center; line-height: 26px;">
-                                <div>
-                                    <span id="rptLocal_lblName_4" class="bigtxt">重庆市</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div style="height: 26px; width: 180px; text-align: center; line-height: 26px;">
-                                <div>
-                                    <span id="rptLocal_lblName_6" class="bigtxt">福建省</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+    <!--图片垂直滑动-->
+    <div class="z_slide_group">
+        <ul class="z_slide1">
+            <li><a><img src=""></a></li>
+            <li><a><img src=""></a></li>
+            <li><a><img src=""></a></li>
+            <li><a><img src=""></a></li>
+        </ul>
+        <ul class="z_slide2">
+            <li><a><img src=""></a></li>
+            <li><a><img src=""></a></li>
+            <li><a><img src=""></a></li>
+            <li><a><img src=""></a></li>
+        </ul>
     </div>
 
+
 </div>
-<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+
+
+<!--<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>-->
+<script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/swiper.min.js"></script>
 <script src="js/z_pages.js"></script>
 <script>
-    $(document).ready(function () {
-        ScrollText_vertic($('#scrollLocalP'), 400, 115, $("#scrollLocalSub"), 'top', 1, 50, 'localPTemp');//垂直循环滚动
-    });
+
 </script>
 </body>
 </html>
